<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="325dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/TextView_marginTop"
                    android:gravity="center"
                    android:text="@string/Team_A"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/TextView_marginTop"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@android:color/black"
                    android:textSize="48sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/TextView_Botton"
                    android:onClick="addPointOfA"
                    android:text="@string/point" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/Botton_Botton"
                    android:onClick="addFoulOfA"
                    android:text="@string/foulA" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"></View>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/TextView_marginTop"
                    android:gravity="center"
                    android:text="@string/Team_B"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/TextView_marginTop"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@android:color/black"
                    android:textSize="48sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/TextView_Botton"
                    android:onClick="addPointOfB"
                    android:text="@string/point" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/Botton_Botton"
                    android:onClick="addFoulOfB"
                    android:text="@string/foulB" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="resetScore"
            android:text="@string/reset" />

    </RelativeLayout>

</ScrollView>